# ai-powered-search-engine

./: .env.example  .gitignore  DESIGN.md  README.md  config.py  main.py  pyproject.toml  requirements.txt  search.py  setup.py  streamlit_app.py
config/: settings.py
documents/: documents.py
embedders/: embedders.py
indexes/: indexes.py
keys/: keys.py
scripts/: export_graph_diagram.py  generate_ecommerce_data.py  kaggle_e5_ngrok_server.py  verify_ingest_sla.py  verify_search.py
search/: search.py
src/: __init__.py  constants.py
src/graph/: __init__.py  graph.py  graph_programmatic.mmd
src/models/: __init__.py  dataset_schema.py  schema_registry.py  state.py
src/nodes/: __init__.py  evaluator.py  query_understander.py  reporter.py  reranker.py  retrieval_router.py  searcher.py
src/prompts/: intent_parse.txt  reranker_explanation.txt  retrieval_routing.txt
src/tools/: __init__.py  dataset_loader.py  embedder.py  ingest_api.py  kafka_consumer.py  kafka_producer.py  meilisearch_client.py  setup_index.py
src/utils/: __init__.py  checkpointer.py  config.py  gemini_meili_embedder.py  ingest_sla_contract.py  injection_guard.py  langwatch_tracker.py  llm.py  local_sentence_embedding.py  logger.py  model_warmup.py  query_catalog_alignment.py  query_word_limit.py  rerank_async.py  state_display.py  triton_cpu_shim.py
tasks/: tasks.py
tests/: conftest.py  test_evaluator.py  test_gemini_meili_embedder.py  test_ingest_contract.py  test_injection_guard.py  test_meilisearch_client.py  test_query_catalog_alignment.py  test_query_understander.py  test_query_word_limit.py  test_reporter.py  test_reranker.py  test_routing.py  test_schema.py  test_searcher.py  test_utils.py
