[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "novamart-search"
version = "0.1.0"
description = "AI-powered hybrid search engine for NovaMart"
requires-python = ">=3.10"
dependencies = [
    # Core orchestration
    "langgraph==1.0.9",
    "langchain-core>=1.0.2",
    "langchain-openai==1.0.3",

    # Search backend — Meilisearch REST (meilisearch_client, setup_index)
    "requests==2.32.3",

    # Embeddings + reranker
    "sentence-transformers==3.3.1",
    "torch==2.3.1",

    # LLM Guard (prompt injection)
    "llm-guard==0.3.14",

    # Pydantic state schema
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",

    # Observability
    "langwatch==0.13.0",

    # Config
    "python-dotenv==1.0.1",

    # Data loading
    "pandas==2.2.3",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "pytest-cov==6.0.0",
]
ui = [
    "streamlit>=1.28.0,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]